Fix iOS vertical overflow

--- a/src/ui-core/styles/ratio.module.scss
+++ b/src/ui-core/styles/ratio.module.scss
@@ -1,11 +1,8 @@
 .parent-container {
-	aspect-ratio: var(--ratio);
 	width: 100%;
-	max-height: 100%;
-	
-	display: flex;
-	align-self: center;
-	justify-content: center;
+	height: 100%;
+	display: flow-root;
+	align-content: center;
 
 	&::before {
 		content: "";
@@ -15,16 +12,16 @@
 
 	.ratio-container {
 		aspect-ratio: var(--ratio);
-		height: 100%;
-		max-width: 100%;
-		
+		max-height: 100%;
+
 		position: relative;
+		margin-inline: auto;
 	}
 
 	&[style*="--ratio: initial"] {
-		height: 100%;
 		.ratio-container {
 			width: 100%;
+			height: 100%;
 		}
 	}
 }
